--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	min-width: 1100px;
 	max-width: 1600px;
 	margin: 0 auto;
-	font-family: 'Helvetica Neue', Arial, sans-serif;
+	font-family: 'Helvetica Neue', 'Arial', sans-serif;
 	flex-wrap: wrap;
 }
 
@@ -19,7 +19,6 @@
 	max-height: 756px;
 	max-width: 1600px;
 	width: 100%;
-	display: flex;
 }
 
 .header__logo {
@@ -29,12 +28,11 @@
 }
 
 .header__title {
-	position: absolute;
+	position: relative;
 	font-size: 102px;
-	margin-left: 64px;
 	height: 96px;
-	left: 0;
-	top: 28%;
+	left: 64px;
+	top: 20%;
 	width: 730px;
 	font-family: 'Arial', sans-serif;
 }
@@ -43,7 +41,7 @@
 	position: relative;
 	font-size: 18px;
 	left: 64px;
-  	bottom: 30px;
+	top: 340px;
 	line-height: 25px;
 	width: 388px;
 	font-weight: normal;
@@ -236,10 +234,8 @@
 	position: relative;
 	color: #2f80ed;
 	text-decoration: none;
-	right: 60px;
-	width: 100%;
-	height: 100%;
-	top: 50%;
+	/* right: 60px; */
+	/* bottom: 50%; */
 	line-height: 51px;
 	font-size: 36px;
 	font-weight: normal;
