--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@
 .two-columns__span-accent {  
 	margin-top: 30px;
 	margin-bottom: 30px;
-	line-weight: 34px;
+	font-weight: 34px;
 	font-size: 24px;
 	font-weight: normal;
 }
@@ -201,14 +201,17 @@
 .feynman {
 	height: 890px;
 	height: 100%;
-	margin: 100px 0 0 0; 
-	display: grid;
+	min-width: 1100px;
+	max-width: 1600px;
+	margin: 0;
+	margin-top: 100px;
 }
 
 .feynman__title {
 	position: relative;
 	width: 648px;
 	width: 100%;
+	height: auto;
 	line-height: 1.15px;
 	font-size: 120px;
 	font-weight: bold;
@@ -234,12 +237,14 @@
 	position: relative;
 	color: #2f80ed;
 	text-decoration: none;
-	/* right: 60px; */
-	/* bottom: 50%; */
+	margin: 0;
+	margin-left: 520px;
+	margin-top: 50%;
+	bottom: 50%;
 	line-height: 51px;
 	font-size: 36px;
 	font-weight: normal;
-	margin-right: 0;
+	margin-right: 60px;
 }
 
 .feynman__image {
